# dod-contract-alpha

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup_live.sh
data/: mock_fundamentals.json  portfolio_template.json  sample_contracts.json  ticker_map.yaml
src/: __init__.py  classify_sector.py  dcf.py  edgar.py  edgar_company_lookup.py  entity_resolution.py  fetch_usaspending.py  fundamentals.py  models.py  parse_contracts.py  report.py  scoring.py
tests/: test_brief_signal_strength.py  test_classify_sector.py  test_conviction_checklist.py  test_data_integrity.py  test_dcf.py  test_edgar_overlay.py  test_graham_expansion.py  test_integration_smoke.py  test_mock_data_consistency.py  test_narrative_risks.py  test_readme_mock_fundamentals_count.py  test_readme_ticker_map_count.py  test_scoring.py  test_signal_strength.py  test_thesis_negative_bear_iv.py  test_watch_loop_ordering.py
